// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds admin get moderation reports view gets all moderation reports by active resolution action type. 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 3,
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(0)",
    "resolvedByActionIds": Array [
      4,
    ],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectRepoHandle": "bob.test",
  },
]
`;

exports[`pds admin get moderation reports view gets all moderation reports for a record. 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 1,
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(0)",
    "resolvedByActionIds": Array [
      2,
    ],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectRepoHandle": "alice.test",
  },
]
`;

exports[`pds admin get moderation reports view gets all moderation reports for a repo. 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 5,
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(0)",
    "resolvedByActionIds": Array [
      6,
    ],
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectRepoHandle": "alice.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 2,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(1)",
    "resolvedByActionIds": Array [],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectRepoHandle": "alice.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 1,
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(0)",
    "resolvedByActionIds": Array [
      2,
    ],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(1)",
      "uri": "record(1)",
    },
    "subjectRepoHandle": "alice.test",
  },
]
`;

exports[`pds admin get moderation reports view gets all moderation reports. 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 6,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(0)",
    "resolvedByActionIds": Array [],
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectRepoHandle": "carol.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 5,
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(1)",
    "resolvedByActionIds": Array [
      6,
    ],
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(1)",
    },
    "subjectRepoHandle": "alice.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 4,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(0)",
    "resolvedByActionIds": Array [],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectRepoHandle": "dan.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 3,
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(1)",
    "resolvedByActionIds": Array [
      4,
    ],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(1)",
      "uri": "record(1)",
    },
    "subjectRepoHandle": "bob.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 2,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(0)",
    "resolvedByActionIds": Array [],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(2)",
      "uri": "record(2)",
    },
    "subjectRepoHandle": "alice.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 1,
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(1)",
    "resolvedByActionIds": Array [
      2,
    ],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(3)",
      "uri": "record(3)",
    },
    "subjectRepoHandle": "alice.test",
  },
]
`;

exports[`pds admin get moderation reports view gets all resolved/unresolved moderation reports. 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 5,
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(0)",
    "resolvedByActionIds": Array [
      6,
    ],
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectRepoHandle": "alice.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 3,
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(0)",
    "resolvedByActionIds": Array [
      4,
    ],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectRepoHandle": "bob.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 1,
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(0)",
    "resolvedByActionIds": Array [
      2,
    ],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(1)",
      "uri": "record(1)",
    },
    "subjectRepoHandle": "alice.test",
  },
]
`;

exports[`pds admin get moderation reports view gets all resolved/unresolved moderation reports. 2`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 6,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(0)",
    "resolvedByActionIds": Array [],
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(0)",
    },
    "subjectRepoHandle": "carol.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 4,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(0)",
    "resolvedByActionIds": Array [],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(0)",
      "uri": "record(0)",
    },
    "subjectRepoHandle": "dan.test",
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 2,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(0)",
    "resolvedByActionIds": Array [],
    "subject": Object {
      "$type": "com.atproto.repo.strongRef",
      "cid": "cids(1)",
      "uri": "record(1)",
    },
    "subjectRepoHandle": "alice.test",
  },
]
`;
